src/stylesheets/components/_vocab.scss
//
// Vocab
// --------------------------------------------------

.vocab {
  padding-top: $space-lg;

  .panel {
    background-color: $vocab-panel-bg;
  }

  .panel-body {
    padding: $space-sm $default-padding-horizontal;
  }

  .vocab-header {
    margin-bottom: $space-sm;
  }

  .vocab-heading {
    font-size: $font-size-small;
    color: $panel-heading-color;
    line-height: $line-height-large;
    padding-left: $space-xs;
  }

  .control-label {
    color: $vocab-label-color;
  }

  .form-control {
    background: $vocab-input-bg;
    border-color: $vocab-input-border;

    @include form-control-focus; // sass-lint:disable-line mixins-before-declarations
  }

  .property {
    margin-bottom: $space-min;

    &:last-child {
      margin-bottom: 0;
    }

    fieldset {
      background: $property-bg;
      padding: 5px $space-xs;
    }

    .form-control {
      background: $property-input-bg;
      border-color: $property-input-border;

      @include form-control-focus; // sass-lint:disable-line mixins-before-declarations
    }
  }
}

